# projeto

./: pyproject.toml  requirements.txt  twitter_clone_db
staticfiles/static/: styles.css
tweets/: forms.py  models.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_rename_follower_follow_user_alter_tweet_content.py  0003_profile.py
tweets/templates/: base.html
tweets/templates/account/: login.html  register.html  signup.html
tweets/templates/tweets/: create_tweet.html  followers_list.html  home.html  tweet_detail.html  user_profile.html
twitter_clone/: asgi.py  settings.py  urls.py  wsgi.py
twitter_clone/static/: styles.css
twitter_clone/templates/tweets/: feed.html  user_profile.html
